Closed Bug 1893466 Opened 10 days ago Closed 6 days ago

Crash in [@ mozilla::nsCookieBannerTelemetryService::MaybeReportGoogleGDPRChoiceTelemetry]

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox125 --- unaffected
firefox126 + fixed
firefox127 + fixed

People

(Reporter: aryx, Assigned: timhuang)

References

(Regression)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(2 files)

10-20 crashes from 3-6 installs for 126.0 beta 3 and 4

Crash report: https://crash-stats.mozilla.org/report/index/6402c5cd-8207-4959-863b-02bab0240425

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames:

0  xul.dll  mozilla::nsCookieBannerTelemetryService::MaybeReportGoogleGDPRChoiceTelemetry...  toolkit/components/cookiebanners/nsCookieBannerTelemetryService.cpp:251
1  xul.dll  nsObserverList::NotifyObservers(nsISupports*, char const*, char16_t const*)  xpcom/ds/nsObserverList.cpp:71
1  xul.dll  nsObserverService::NotifyObservers(nsISupports*, char const*, char16_t const*)  xpcom/ds/nsObserverService.cpp:289
2  xul.dll  XPTC__InvokebyIndex
3  xul.dll  NS_InvokeByIndex(nsISupports*, unsigned int, unsigned int, nsXPTCVariant*)  xpcom/reflect/xptcall/md/win32/xptcinvoke_x86_64.cpp:57
3  xul.dll  CallMethodHelper::Invoke()  js/xpconnect/src/XPCWrappedNative.cpp:1621
3  xul.dll  CallMethodHelper::Call()  js/xpconnect/src/XPCWrappedNative.cpp:1174
3  xul.dll  XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode)  js/xpconnect/src/XPCWrappedNative.cpp:1120
4  xul.dll  XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*)  js/xpconnect/src/XPCWrappedNativeJSOps.cpp:966
5  xul.dll  CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::...  js/src/vm/Interpreter.cpp:479
Flags: needinfo?(tihuang)
Assignee: nobody → tihuang
Status: NEW → ASSIGNED
Flags: needinfo?(tihuang)

The bug is linked to a topcrash signature, which matches the following criterion:

  • Top 20 desktop browser crashes on beta

For more information, please visit BugBot documentation.

Keywords: topcrash
Pushed by tihuang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/60c445d075af
Don't collect Google GDRP telemetry if no default search engine is available. r=pbz
Status: ASSIGNED → RESOLVED
Closed: 6 days ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch

The patch landed in nightly and beta is affected.
:timhuang, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox126 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(tihuang)
Attachment #9399338 - Flags: approval-mozilla-beta?

beta Uplift Approval Request

  • User impact if declined: Firefox will crash if no default search engine is available.
  • Code covered by automated testing: no
  • Fix verified in Nightly: no
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: None
  • Risk associated with taking this patch: Low
  • Explanation of risk level: The change is small and shouldn't affect any user behavior.
  • String changes made/needed: no
  • Is Android affected?: yes
Flags: needinfo?(tihuang)
Attachment #9399338 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: