Bug 1893466 - Don't collect Google GDRP telemetry if no default search engine is available.  a=dmeehan

Original Revision: https://phabricator.services.mozilla.com/D208724

Differential Revision: https://phabricator.services.mozilla.com/D208993