toolkit/components/cookiebanners/nsCookieBannerTelemetryService.cpp
@@ -247,6 +247,14 @@ nsresult nsCookieBannerTelemetryService::MaybeReportGoogleGDPRChoiceTelemetry(
   rv = searchService->GetDefaultEngine(getter_AddRefs(engine));
   NS_ENSURE_SUCCESS(rv, rv);
 
+  // Bail out early if no default search engine is available. This could happen
+  // if no search engine is shipped with the Gecko.
+  if (!engine) {
+    MOZ_LOG(gCookieBannerTelemetryLog, LogLevel::Debug,
+            ("No default search engine is available."));
+    return NS_OK;
+  }
+
   nsAutoString id;
   rv = engine->GetId(id);
   NS_ENSURE_SUCCESS(rv, rv);
